--- a/app/assets/styles/_settings-boris.scss
+++ b/app/assets/styles/_settings-boris.scss
@@ -94,6 +94,7 @@ $include-html-global-classes: $include-html-classes;
 // We use these to control various global styles
 // $body-bg: $white;
 // $body-font-color: $jet;
+$body-font-color: $jet;
 // $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 $body-font-family: "Lato", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: $font-weight-normal;
@@ -1369,7 +1370,7 @@ $topbar-bg: $topbar-bg-color;
 
 // Height and margin
 // $topbar-height: 45px;
-$topbar-height: 30px;
+$topbar-height: 50px;
 // $topbar-margin-bottom: 0;
 
 // Controlling the styles for the title in the top bar
@@ -1388,10 +1389,10 @@ $topbar-dropdown-bg: #fff;
 
 // Set the link colors and styles for top-level nav
 // $topbar-link-color: $white;
-$topbar-link-color: #9b9b9b;
-$topbar-link-color-hover: $salmon;
-$topbar-link-color-active: $salmon;
-$topbar-link-color-active-hover: $salmon;
+$topbar-link-color: #aaa;
+$topbar-link-color-hover: #fff;
+$topbar-link-color-active: #fff;
+$topbar-link-color-active-hover: #fff;
 // $topbar-link-weight: $font-weight-normal;
 $topbar-link-weight: 900;
 // $topbar-link-font-size: rem-calc(13);
@@ -1399,11 +1400,11 @@ $topbar-link-font-size: rem-calc(14);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
 // $topbar-link-bg: $topbar-bg;
 $topbar-link-bg: $topbar-bg;
-$topbar-link-bg-color-hover: #fff;
-$topbar-link-bg-hover: #fff;
-$topbar-link-bg-active: #fff;
+$topbar-link-bg-color-hover: $salmon;
+$topbar-link-bg-hover: $salmon;
+$topbar-link-bg-active: $salmon;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
-$topbar-link-bg-active-hover: #fff;
+$topbar-link-bg-active-hover: $salmon;
 // $topbar-link-font-family: $body-font-family;
 // $topbar-link-text-transform: none;
 // $topbar-link-padding: $topbar-height / 3;
