--- a/app/assets/styles/boris.scss
+++ b/app/assets/styles/boris.scss
@@ -9,7 +9,15 @@
 @import "partials-front/about";
 @import "partials-front/work";
 
+body {
+  @media #{$medium-up} {
+    padding-top: 100px;
+  }
+
+}
+
 .first-container {
+  padding-top: 30px;
   margin-bottom: 30px;
   @media #{$small-only} {
   }
@@ -43,40 +51,41 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
 
-.page {
+// TOP NAV
+.contain-to-grid {
+  position: fixed;
+  z-index: 9999;
+  top: 0;
   nav .left a {
     text-transform: uppercase;
+  }
+  @media #{$small-only} {
+    border-bottom: 1px solid $salmon;
+    ul.left {
+      border-top: 1px solid $salmon;
+      margin-top: 20px;
+      padding-top: 20px;
+    }
+    ul li.left:not(:last-child) {
+      border-bottom: 1px solid $salmon;
+    }
+    ul li.right:not(:last-child) {
+      border-bottom: 1px solid $salmon;
+    }
+
+  }
+  @media #{$medium-up} {
+  }
+  padding: 0;
+  margin: 0;
+}
+
+.page {
+  @media #{$medium-up} {
   }
 
   .title-container {
     margin-bottom: 20px;
-  }
-
-  // TOP NAV
-  .contain-to-grid {
-    @media #{$small-only} {
-      position: fixed;
-      z-index: 100;
-      top: 0;
-      border-bottom: 1px solid $salmon;
-      ul.left {
-        border-top: 1px solid $salmon;
-        margin-top: 20px;
-        padding-top: 20px;
-      }
-      ul li.left:not(:last-child) {
-        border-bottom: 1px solid $salmon;
-      }
-      ul li.right:not(:last-child) {
-        border-bottom: 1px solid $salmon;
-      }
-
-    }
-    @media #{$medium-up} {
-      margin: 0 0 40px;
-    }
-    padding: 20px 0 20px;
-    margin: 0;
   }
 
   @media #{$small-only}{
@@ -104,5 +113,29 @@ h1, h2, h3, h4, h5, h6 {
   }
   .body-container {
     margin-bottom: 40px;
+  }
+}
+
+#preloader{
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  overflow: hidden;
+  background-color: #fff;
+  .spinner {
+    display: block;
+    width: 60px;
+    height: 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -15px;
+    margin-left: -45px;
+    background: url(/assets/images/preloader.gif) no-repeat center;
+    background-size: 60px;
   }
 }
