--- a/app/assets/styles/frontend/layout/_content.scss
+++ b/app/assets/styles/frontend/layout/_content.scss
@@ -10,3 +10,12 @@
 .l-content > ul {
   margin-bottom: 20px;
 }
+
+.l-contact {
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+.l-about {
+  padding-top: 40px;
+}
