--- a/app/assets/styles/boris.scss
+++ b/app/assets/styles/boris.scss
@@ -13,7 +13,7 @@
 //   "foundation/scss/foundation/components/dropdown",
 //   "foundation/scss/foundation/components/dropdown-buttons",
 //   "foundation/scss/foundation/components/flex-video",
-//   "foundation/scss/foundation/components/forms",
+   "foundation/scss/foundation/components/forms",
    "foundation/scss/foundation/components/grid",
    "foundation/scss/foundation/components/inline-lists",
 //   "foundation/scss/foundation/components/joyride",
@@ -41,5 +41,4 @@
 ;
 
 @import "frontend/layout/layout";
-
 @import "frontend/components/components";
