--- a/app/assets/styles/frontend/layout/_header.scss
+++ b/app/assets/styles/frontend/layout/_header.scss
@@ -1,12 +1,22 @@
 .l-header{
   background-color: $secondary-color;
   width: 100%;
-  .contain-to-grid{
-    position: absolute;
-    padding: 30px 0;
-    top: 0;
-    left: 0;
-    z-index: 0;
+}
+
+.contain-to-grid{
+  position: absolute;
+  padding: 40px 0;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.l-header-small-banner{
+  height: 100px;
+  padding: 12px 0;
+  > img {
+    display: block;
+    margin: 0 auto;
   }
 }
 
