Continuo maquetando el sitio

--- a/app/assets/styles/boris.scss
+++ b/app/assets/styles/boris.scss
@@ -35,9 +35,9 @@
 //   "foundation/scss/foundation/components/thumbs",
 //   "foundation/scss/foundation/components/tooltips",
    "foundation/scss/foundation/components/top-bar",
-   "foundation/scss/foundation/components/type"
+   "foundation/scss/foundation/components/type",
 //   "foundation/scss/foundation/components/offcanvas",
-//   "foundation/scss/foundation/components/visibility"
+   "foundation/scss/foundation/components/visibility"
 ;
 
 @import "frontend/layout/layout";
