--- a/app/assets/styles/frontend/components/_textPresentation.scss
+++ b/app/assets/styles/frontend/components/_textPresentation.scss
@@ -27,7 +27,12 @@
   padding-bottom: 15px;
 }
 
+.text_presentation-p-contact {
+  text-align: center;
+}
+
 .text_presentation-p-home {
+  text-align: center;
   padding:  0 20px 0;
   @media #{$medium-only} {
     padding: 0 100px 0;
