--- a/app/assets/styles/frontend/utils/_config.scss
+++ b/app/assets/styles/frontend/utils/_config.scss
@@ -7,6 +7,16 @@ $include-html-classes: true;
 // $include-print-styles: true;
 $include-html-global-classes: $include-html-classes;
 
+// b. Grid
+// - - - - - - - - - - - - - - - - - - - - - - - - -
+
+$include-html-grid-classes: $include-html-classes;
+$include-xl-html-grid-classes: false;
+
+// $row-width: rem-calc(1000);
+// $total-columns: 12;
+$column-gutter: rem-calc(20);
+
 $font-family-sans-serif: "Lato", Helvetica, Roboto, Arial, sans-serif;
 $font-family-serif: 'EB Garamond', Georgia, Cambria, "Times New Roman", Times, serif;
 $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
@@ -151,7 +161,7 @@ $topbar-bg-color: transparent;
 $topbar-bg: $topbar-bg-color;
 
 // Height and margin
-$topbar-height: 20px;
+$topbar-height: 40px;
 // $topbar-margin-bottom: 0;
 
 // Controlling the styles for the title in the top bar
@@ -197,10 +207,10 @@ $topbar-link-padding: $topbar-height / 1.5;
 
 // Top menu icon styles
 // $topbar-menu-link-transform: uppercase;
-// $topbar-menu-link-font-size: rem-calc(13);
+$topbar-menu-link-font-size: rem-calc(13);
 // $topbar-menu-link-weight: $font-weight-bold;
-// $topbar-menu-link-color: $white;
-// $topbar-menu-icon-color: $white;
+$topbar-menu-link-color: $primary-color;
+$topbar-menu-icon-color: $primary-color;
 // $topbar-menu-link-color-toggled: $jumbo;
 // $topbar-menu-icon-color-toggled: $jumbo;
 
@@ -257,7 +267,7 @@ $include-html-form-classes: $include-html-classes;
 // $form-label-pointer: pointer;
 // $form-label-font-size: rem-calc(14);
 // $form-label-font-weight: $font-weight-normal;
-// $form-label-line-height: 1.5;
+$form-label-line-height: 2;
 // $form-label-font-color: scale-color($black, $lightness: 30%);
 $form-label-small-transform: uppercase;
 // $form-label-bottom-margin: 0;
@@ -316,6 +326,22 @@ $input-include-glowing-effect: false;
 // Select variables
 //$select-bg-color: $ghost;
 // $select-hover-bg-color: scale-color($select-bg-color, $lightness: -3%);
+
+
+// 03. Block Grid
+// - - - - - - - - - - - - - - - - - - - - - - - - -
+
+// $include-html-block-grid-classes: $include-html-classes;
+// $include-xl-html-block-grid-classes: false;
+
+// We use this to control the maximum number of block grid elements per row
+// $block-grid-elements: 12;
+// $block-grid-default-spacing: rem-calc(20);
+$align-block-grid-to-grid: true;
+
+// Enables media queries for block-grid classes. Set to false if writing semantic HTML.
+// $block-grid-media-queries: true;
+
 
 
 // 05. Buttons
