Desarrollo de la seccion project

--- a/app/assets/styles/frontend/components/_components.scss
+++ b/app/assets/styles/frontend/components/_components.scss
@@ -1,7 +1,11 @@
 @import "globals";
+@import "link_arrow";
 @import "top-nav";
 @import "textPresentation";
 @import "listProjects";
 @import "follow";
 @import "slogan";
 @import "form";
+@import "preview_project";
+@import "project-img";
+@import "share-socials";
