--- a/app/assets/styles/frontend/components/_textPresentation.scss
+++ b/app/assets/styles/frontend/components/_textPresentation.scss
@@ -42,3 +42,11 @@
     padding: 0 200px 0;
   }
 }
+
+.text_presentation-project {
+  padding-bottom: 0;
+  text-align: center;
+  .text_presentation-p {
+    text-align: center;
+  }
+}
