--- a/app/assets/styles/frontend/utils/_colours.scss
+++ b/app/assets/styles/frontend/utils/_colours.scss
@@ -47,6 +47,11 @@ $follow-color: #b3b3b3;
 
 $slogan-color: #cccccc;
 $copy-color: #999999;
+$sub-heading-color: $aluminum;
+
+$hr-preview: #b7b7b7;
+
+$shared-icons-color: $iron;
 
 //nav principal
 $nav-ppal-color: #a1a1a1;
