--- a/app/assets/styles/frontend/components/_globals.scss
+++ b/app/assets/styles/frontend/components/_globals.scss
@@ -8,10 +8,18 @@
 
 .section-heading-sf {
   font-family: $font-family-serif;
-  font-size: rem-calc(22);
-  font-weight: 700;
-  letter-spacing: 5px;
+  font-size: rem-calc(30);
+  font-weight: 500;
+  letter-spacing: 0px;
   text-transform: none;
+}
+
+.sub-heading {
+  font-family: $font-family-sans-serif;
+  margin-bottom: 0;
+  font-size: rem-calc(12);
+  color: $sub-heading-color;
+  text-transform: uppercase;
 }
 
 .menu-secondary-typo {
@@ -27,4 +35,17 @@
   height: 25px;
   display: block;
   margin: rem-calc(20) auto;
+}
+
+.text_with_arrow {
+  font-family: $font-family-serif;
+  font-weight: 700;
+  > i {
+    line-height: 30px;
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 30px;
+    padding-left: 20px;
+    font-weight: 700;
+  }
 }
