--- a/app/assets/styles/frontend/utils/_config.scss
+++ b/app/assets/styles/frontend/utils/_config.scss
@@ -74,7 +74,7 @@ $header-font-color: $header-color-primary;
 //$paragraph-font-family: $font-family-serif;
 // $paragraph-font-weight: $font-weight-normal;
 $paragraph-font-size: 1.125rem;
-// $paragraph-line-height: 1.6;
+$paragraph-line-height: 1.35;
 // $paragraph-margin-bottom: rem-calc(20);
 // $paragraph-aside-font-size: rem-calc(14);
 // $paragraph-aside-line-height: 1.35;
