--- a/app/assets/styles/frontend/components/_slogan.scss
+++ b/app/assets/styles/frontend/components/_slogan.scss
@@ -15,8 +15,12 @@
   >li {
     float: none;
     > a {
+      @extend .link-underline;
       @extend .menu-secondary-typo;
       color: $slogan-color;
+      &:hover {
+        border-color: $slogan-color;
+      }
     }
   }
 }
