--- a/app/assets/styles/frontend/components/_share-socials.scss
+++ b/app/assets/styles/frontend/components/_share-socials.scss
@@ -18,6 +18,7 @@
   >li {
     display: inline-block;
     >a {
+      @extend .link-transition;
       color: $shared-icons-color;
 
       &:hover {
@@ -40,6 +41,7 @@
   font-size: rem-calc(11px);
   width: 150px;
   text-transform: uppercase;
+  letter-spacing: 2px;
   transform: rotate(-90deg);
   > i {
     padding-left: 10px;
