--- a/app/assets/styles/frontend/utils/_config.scss
+++ b/app/assets/styles/frontend/utils/_config.scss
@@ -95,7 +95,8 @@ $paragraph-line-height: 1.35;
 // $anchor-text-decoration: none;
 // $anchor-text-decoration-hover: none;
 // $anchor-font-color: $primary-color;
-// $anchor-font-color-hover: scale-color($primary-color, $lightness: -14%);
+//$anchor-font-color-hover: scale-color($primary-color, $lightness: -14%);
+$anchor-font-color-hover: $primary-color;
 
 // We use these to style the <hr> element
 $hr-border-width: 2px;
