--- a/app/assets/styles/boris.scss
+++ b/app/assets/styles/boris.scss
@@ -42,3 +42,17 @@
 
 @import "frontend/layout/layout";
 @import "frontend/components/components";
+
+#preloader{
+   display: block;
+   overflow: hidden;
+   background-color: #fff;
+   .spinner {
+      height: 450px;
+      margin: 0 auto;
+      display: block;
+      width: 50px;
+//      height: 50px;
+      background: url(/assets/images/puff.svg) no-repeat center;
+   }
+}
