--- a/app/assets/styles/frontend/components/_top-nav.scss
+++ b/app/assets/styles/frontend/components/_top-nav.scss
@@ -24,10 +24,10 @@
 
 
 // Posiblemente se cambie
-.top-bar section.top-bar-section ul.left li .nav-link {
-  @media #{$medium-up} {
-    line-height: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-}
+//.top-bar section.top-bar-section ul.left li .nav-link {
+//  @media #{$medium-up} {
+//    line-height: 20px;
+//    padding-top: 10px;
+//    padding-bottom: 10px;
+//  }
+//}
