--- a/app/assets/styles/frontend/utils/_config.scss
+++ b/app/assets/styles/frontend/utils/_config.scss
@@ -162,7 +162,7 @@ $topbar-bg-color: transparent;
 $topbar-bg: $topbar-bg-color;
 
 // Height and margin
-$topbar-height: 40px;
+$topbar-height: rem-calc(20);
 // $topbar-margin-bottom: 0;
 
 // Controlling the styles for the title in the top bar
@@ -193,7 +193,7 @@ $topbar-link-bg-active: $topbar-bg-color;
 $topbar-link-bg-active-hover: $topbar-bg-color;
 $topbar-link-font-family: $font-family-sans-serif;
 // $topbar-link-text-transform: none;
-$topbar-link-padding: $topbar-height / 1.5;
+$topbar-link-padding: ( $topbar-height / 1.5 );
 // $topbar-back-link-size: $h5-font-size;
 // $topbar-link-dropdown-padding: 20px;
 
